# learn_more_the_hard_way

./: .gitignore  README.md  fiveTime.py  vampire.py  your_name.py
python_learn_more_the_hard_way/: .gitignore  allMyCats1.py  allMyCats2.py  collatzSequence.py  conway.py  create_orc.py  fiveTime.py  guessTheNumber.py  helloFunc.py  myPets.py  passingReference.py
python_learn_more_the_hard_way/create_file/: create_json.py  create_orc.py  create_parquet.py  create_text.py
rust_learn_more_the_hard_way/: .gitignore  Cargo.toml
rust_learn_more_the_hard_way/rust/: Dockerfile
rust_learn_more_the_hard_way/src/: main.rs
rust_learn_more_the_hard_way/src/brain_teasers/: mod.rs  puzzle.rs
rust_learn_more_the_hard_way/src/coin_flip_streaks/: coin.rs  mod.rs
rust_learn_more_the_hard_way/src/conway/: conway.rs  mod.rs
rust_learn_more_the_hard_way/src/design_patterns/: mod.rs
rust_learn_more_the_hard_way/src/exercise/: control_flow.rs  day_one.rs  mod.rs
rust_learn_more_the_hard_way/src/random_walker/: mod.rs
rust_learn_more_the_hard_way/src/rusqlite_con/: db.rs
rust_learn_more_the_hard_way/src/zigzag/: mod.rs  zigzag.rs
